0027883: Visualization - AIS_InteractiveContext::IsDisplayed() does not return displayed state for specified Display Mode